Spacing fixes

--- a/src/components/CV/CV.module.css
+++ b/src/components/CV/CV.module.css
@@ -1,9 +1,10 @@
 .cvSection {
-  margin: 0px auto;
-  text-align: center;
+	margin: 0px auto;
+	text-align: center;
 }
 
 .cvButton {
-  margin: auto;
-  text-align: center;
+	margin: auto;
+	text-align: center;
+	margin-bottom: 16px;
 }
