--- a/src/hoc/Layout/Layout.module.css
+++ b/src/hoc/Layout/Layout.module.css
@@ -30,18 +30,8 @@
 	}
 }
 
-/*@media (max-width: 600px) {
-	.Content {
-		width: 100%;
-	}
-	.Container {
-		width: 100%;
-	}
-	.Footer {
-		width: 100%;
-	}
-}*/
-
 .pageTitle {
 	text-align: center;
+	padding-top: 24px;
+	padding-bottom: 24px;
 }
